--- a/src/templates/endevent_user.html
+++ b/src/templates/endevent_user.html
@@ -4,7 +4,7 @@
 {% block EndEvent %}
 <div class="card"
      style="left: 50px;height: 50px; width: 290px; justify-content: center;display: flex">
-    <button type="button" class="EndEvent" id="EndEvent" onclick=EndEvent()>
+    <button type="button" class="EndEvent" id="EndEvent" onclick="EndEvent('{{event_id}}')">
         Завершить событие
     </button>
 </div>
@@ -12,33 +12,36 @@
 
 
 {% block users_info %}
-<div class="card"
-     style="left: 50px;height: 50px; width: 290px; justify-content: center;display: flex">
-    <div class="block1">
-        <h1 style="bottom: 5px;font-size: 12px; color: #7a9a8a;position: relative; z-index: 2">
-           1 2
+<div id="users-container">
+    {% for user in users %}
+    <div id="user_id"></div>
+    <div class="card"
+         style="margin-top: 10px;left: 10px;height: 50px; width: 370px; justify-content: center;display: flex">
+        <h1 style="font-size: 14px; color: #7a9a8a;position: relative; z-index: 2; left: 15px; padding: 5px">
+            {{ user.name }} {{ user.surname }}
         </h1>
-    </div>
-    <div class="block2">
-        <div class="checkbox-wrapper-35">
-            <input value="private" name="switch" id="switch" type="checkbox" class="switch">
-            <label for="switch">
-                <span class="switch-x-text">Человек </span>
-                <span class="switch-x-toggletext">
-                    <span class="switch-x-unchecked"><span class="switch-x-hiddenlabel">Unchecked: </span>Не участвовал</span>
-                    <span class="switch-x-checked"><span class="switch-x-hiddenlabel">Checked: </span>Участвовал</span>
+        <div style="display: flex; padding: 10px; margin-left: 25px">
+            <div class="checkbox-wrapper-35">
+                <input value="private" name="switch" id="switch_{{user.id}}" type="checkbox" class="switch"
+                       style="z-index: 3" data-user_id="{{ user.id }}">
+                <label for="switch_{{user.id}}" style="z-index: 3">
+                    <span class="switch-x-text">Человек</span>
+                    <span class="switch-x-toggletext">
+                    <span class="switch-x-unchecked"><span class="switch-x-hiddenlabel">Unchecked: </span>не участвовал</span>
+                    <span class="switch-x-checked"><span class="switch-x-hiddenlabel">Checked: </span>участвовал</span>
                 </span>
-            </label>
+                </label>
+            </div>
         </div>
     </div>
+    {% endfor %}
 </div>
-
 {% endblock %}
 
 
 {% block href_main %}
 <!-- "Перейти на главную" -->
-<a href="/pages/main_user/{{user_info.id}}" style="text-decoration: none">
+<a href="/pages/main_user/{{user_id}}" style="text-decoration: none">
     <button class="btn_GoToTheClub" type="button" style="margin-top: 25px">
         <strong>На главную</strong>
         <div id="container-stars">
