--- a/src/templates/main_base.html
+++ b/src/templates/main_base.html
@@ -72,11 +72,7 @@
 
         <!-- блок 3: ссылка в канал/чат клуба-->
         <div class="block4" style="margin-top: 20px">
-            <button class="Btn"
-                    style="z-index: 2;height: 80px; width: 115px; justify-content: center; vertical-align: center">
-                <h1 style="bottom: 5px;font-size: 15px; position: relative; z-index: 2">
-                    В канал</h1>
-            </button>
+            {% block channel %}{% endblock %}
         </div>
     </div>
 
