--- a/src/templates/search_user.html
+++ b/src/templates/search_user.html
@@ -57,6 +57,7 @@
 
 
 {% block href_main %}
+{% if user_info.exist_main_club == 1 %}
 <a href="/pages/main_user/{{user_info.id}}" style="text-decoration: none">
     <button class="btn_GoToTheClub" type="button" style="margin-top: 20px">
         <strong>На главную</strong>
@@ -69,6 +70,20 @@
         </div>
     </button>
 </a>
+{% else %}
+<a href="/pages/profile_user/{{user_info.id}}" style="text-decoration: none">
+    <button class="btn_GoToTheClub" type="button" style="margin-top: 20px">
+        <strong>В профиль</strong>
+        <div id="container-stars">
+            <div id="stars"></div>
+        </div>
+        <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+        </div>
+    </button>
+</a>
+{% endif %}
 {% endblock %}
 
 
