--- a/src/templates/history_base.html
+++ b/src/templates/history_base.html
@@ -14,8 +14,8 @@
     {% block nav %}{% endblock %}
 
 
-    <!-- "Товары" -->
-    {% block products %}{% endblock %}
+    <!-- "История" -->
+    {% block hist %}{% endblock %}
 
 
 </div>
