--- a/src/static/css_js/history_base_style.css
+++ b/src/static/css_js/history_base_style.css
@@ -18,76 +18,76 @@ nav {
 }
 
 .button {
-  display: block;
-  position: relative;
-  width: 56px;
-  height: 56px;
-  margin: 0;
-  overflow: hidden;
-  outline: none;
-  background-color: transparent;
-  cursor: pointer;
-  border: 0;
+    display: block;
+    position: relative;
+    width: 56px;
+    height: 56px;
+    margin: 0;
+    overflow: hidden;
+    outline: none;
+    background-color: transparent;
+    cursor: pointer;
+    border: 0;
 }
 
 .button:before,
 .button:after {
-  content: "";
-  position: absolute;
-  border-radius: 50%;
-  inset: 7px;
+    content: "";
+    position: absolute;
+    border-radius: 50%;
+    inset: 7px;
 }
 
 .button:before {
-  border: 4px solid #f0eeef;
-  transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
+    border: 4px solid #f0eeef;
+    transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
     transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
 }
 
 .button:after {
-  border: 4px solid #c496f0;
-  transform: scale(1.3);
-  transition: opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
+    border: 4px solid #c496f0;
+    transform: scale(1.3);
+    transition: opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
     transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  opacity: 0;
+    opacity: 0;
 }
 
 .button:hover:before,
 .button:focus:before {
-  opacity: 0;
-  transform: scale(0.7);
-  transition: opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
+    opacity: 0;
+    transform: scale(0.7);
+    transition: opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
     transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
 .button:hover:after,
 .button:focus:after {
-  opacity: 1;
-  transform: scale(1);
-  transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
     transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
 }
 
 .button-box {
-  display: flex;
-  position: absolute;
-  top: 0;
-  left: 0;
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .button-elem {
-  display: block;
-  width: 20px;
-  height: 20px;
-  margin: 17px 18px 0 18px;
-  transform: rotate(180deg);
-  fill: #c496f0;
+    display: block;
+    width: 20px;
+    height: 20px;
+    margin: 17px 18px 0 18px;
+    transform: rotate(180deg);
+    fill: #c496f0;
 }
 
 .button:hover .button-box,
 .button:focus .button-box {
-  transition: 0.4s;
-  transform: translateX(-56px);
+    transition: 0.4s;
+    transform: translateX(-56px);
 }
 
 .logo-container {
@@ -99,7 +99,7 @@ nav {
     justify-content: center;
 }
 
-.logo-container:hover{
+.logo-container:hover {
     background-color: #c3c3c3;
 }
 
@@ -112,7 +112,7 @@ nav {
     justify-content: center;
 }
 
-.logo-container1:hover{
+.logo-container1:hover {
     background-color: #a760ec;
 }
 
@@ -132,7 +132,7 @@ nav {
 .form-container {
     margin-left: 10px;
     width: 370px;
-    height: 90px;
+    height: 105px;
     background: #ffffff;
     border: 2px solid transparent;
     padding: 6px 18px;
@@ -193,4 +193,46 @@ nav {
 .form-container .form-group textarea:focus {
     outline: none;
     border-color: rgba(135, 29, 255, 0.72);
+}
+
+.AcceptProduct {
+    padding: 10px 20px;
+    border: none;
+    background: rgba(85, 255, 112, 0.62);
+    border-radius: 10px;
+    text-transform: uppercase;
+    font-weight: 700;
+    transition: background .2s linear;
+}
+
+.AcceptProduct:hover {
+    background: rgb(85, 255, 112);
+}
+
+.RejAdminProduct {
+    padding: 10px 20px;
+    border: none;
+    background: rgba(255, 85, 85, 0.62);
+    border-radius: 10px;
+    text-transform: uppercase;
+    font-weight: 700;
+    transition: background .2s linear;
+}
+
+.RejAdminProduct:hover {
+    background: rgb(255, 85, 85);
+}
+
+.RejUserProduct {
+    padding: 10px 20px;
+    border: none;
+    background: rgba(255, 85, 85, 0.62);
+    border-radius: 10px;
+    text-transform: uppercase;
+    font-weight: 700;
+    transition: background .2s linear;
+}
+
+.RejUserProduct:hover {
+    background: rgb(255, 85, 85);
 }
